# Traits3D

./: .gitignore  CMakeLists.txt  README.md  android.pro  todo.txt
cmake/: FindEGL.cmake  FindGLESv3.cmake  FindGLFW.cmake  functions.cmake  macros.cmake
examples/: CMakeLists.txt
examples/_common/: CMakeLists.txt
examples/_common/Window/: CMakeLists.txt  Window.cpp  Window.h
examples/_common/glfw-3.0.4/src/: CMakeLists.txt  gamma.c  init.c  input.c  monitor.c  wgl_context.c  win32_init.c  win32_joystick.c  win32_time.c  win32_window.c  window.c
examples/glfw/: CMakeLists.txt
examples/glfw-3.0.4/src/: clipboard.c  context.c  joystick.c  win32_gamma.c  win32_monitor.c
examples/glfw/_common/: CMakeLists.txt
examples/glfw/_common/Window/: CMakeLists.txt  Window.cpp  Window.h  global.h
examples/glfw/_common/glfw-3.0.4/: CMakeLists.txt
examples/glfw/_common/glfw-3.0.4/src/: time.c  win32_clipboard.c
examples/glfw/arcball/: arcball.cpp  arcball.h  arcballexample.cpp  arcballexample.h  main.cpp
examples/glfw/heightmap/: heightmap.cpp  heightmap.h  main.cpp
examples/heightmap/: heightmap.cpp  heightmap.h  main.cpp
examples/heigthmap/: heightmap.cpp
examples/qt/: CMakeLists.txt  common.pro
examples/qt/_common/: CMakeLists.txt  global.h  inputdevice.h  qtwidget.hh  qtwidgetbase.cpp  qtwidgetbase.h
examples/qt/mesh/: colormapreader.cpp  colormapreader.h  functions.h  lightingdialog.cpp  lightingdialog.h  main.cpp  mesh.pro  mesh.qrc  meshmainwindow.cpp  meshmainwindow.h  meshmainwindowbase.ui
examples/qt/quickexample/: fboinsgrenderer.cpp  fboinsgrenderer.h  fborenderer.cpp  fborenderer.h  heightmap.cpp  heightmap.h  main.cpp  main.qml  quickexample.pro  textureinsgnode.qrc
examples/qt/simpleplot/: simpleplot.cpp  simpleplot.pro  splot.pro
misc/: android_screen_grabber.txt  build_for_android.cmd  glloadgen.bat  quickexample.pro  splot.pro
misc/glslhacker/1/: init.lua  mesh.glsl  mesh.xml  resize.lua  start.bat  update.lua
shader/: converter.py  main.py  shader.py  shader.pyproj  shader.sln
shader/input/: Blinn.fsht  Blinn.vert_t  Blinn.vsht  BlinnPhong.frag_t  BlinnPhong.fsht  BlinnPhong.vsht  Simple.fsht  TriangleStrip.vsht  TriangleStripXYZ.vsht
shader/input/fshader/: BlinnPhong.tglsl  Phong.tglsl  Simple.glsl
shader/input/vshader/: BlinnPhong.tglsl  Line.tgsl  LineXYZ.tgsl  TriangleStrip.tgsl
src/: CMakeLists.txt  src.pro
src/base/: CMakeLists.txt  helper.cpp
src/base/include/protean3d/: types.h
src/base/include/traits3d/: global.h  helper.h  matrix.h  types.h
src/glbase/: CMakeLists.txt  glhelper.cpp  globject.cpp  gridrenderer.cpp  ibo.cpp  indexmaker.cpp  linerenderer.cpp  matrixstack.cpp  meshrenderer.cpp  renderer.cpp  shader.cpp  shader_std.cpp  transformation.cpp  vao.cpp  vbo.cpp
src/glbase/include/glb/: glhelper.h  globject.h  ibo.h  indexmaker.h  linerenderer.h  meshrenderer.h  shader.h  shader_std.h  transformation.h  vao.h  vbo.h
src/glbase/include/protean3d/glbase/: glhelper.h  ibo.h  indexmaker.h  shader.h  vbo.h
src/glbase/include/traits3d/glbase/: glhelper.h  globject.h  gridrenderer.h  ibo.h  indexmaker.h  linerenderer.h  matrixstack.h  meshrenderer.h  renderer.h  shader.h  shader_std.h  transformation.h  vao.h  vbo.h
src/glbase/protean3d/glbase/: ibo.h  indexmaker.h  vao.h
src/protean3d/: CMakeLists.txt  autoscaler.cpp  autoscaler.h  axis.cpp  axis.h  axisobject.cpp  axisobject.h  buffer.cpp  buffer.h  color.cpp  color.h  colortable.cpp  colortable.h  coordinates.cpp  coordinates.h  coordinatesobject.cpp  coordinatesobject.h  coordinatesystem.cpp  coordinatesystem.h  data.cpp  dataobject.cpp  dataobject.h  datashader.cpp  datashader.h  extglwidget.cpp  extglwidget.h  gl_includes.h.in  gl_layer.h  glhelper.cpp  glhelper.h  global.h  globject.cpp  globject.h  helper.cpp  helper.h  ibo.cpp  ibo.h  indexmaker.cpp  indexmaker.h  plot3d.cpp  (+23 more)
src/protean3d/include/protean3d/: autoscaler.h  axis.h  axisobject.h  colortable.h  coordinates.h  dataobject.h  extglwidget.h  global.h  globject.h  helper.h  plot3d.h  scale.h  surfaceplot.h  textengine.h  textengine_stb.h  transformation.h  types.h
src/protean3d/protean3d/: axis.h  data.h  extglwidget.h  globject.h  ibo.h  scale.h  textengine.h  textengine_std.h  vao.h  vbo.h
src/resources/: CMakeLists.txt
src/textengine/: .gitignore  CMakeLists.txt  textengine.cpp  textengine_stb.cpp  textengine_std.cpp
src/textengine/fontlib/: CMakeLists.txt  convert_fonts.py  font.cpp  stdfonts.cpp
src/textengine/fontlib/include/protean3d/fonts/: stdfonts.h
src/textengine/fontlib/include/traits3d/fonts/: font.h  fontinfo.h  stdfonts.h
src/textengine/include/protean3d/textengine/: textengine.h  textengine_stb.h  textengine_std.h
src/textengine/include/traits3d/textengine/: textengine.h  textengine_std.h
src/textengine/stb/: CMakeLists.txt  OpenSans_Italic.cpp  OpenSans_Regular.cpp  convert_fonts.py  create_fonts.cpp  stdfonts.cpp
src/textengine/stb/include/protean3d/fonts/: OpenSans_Italic.h  OpenSans_Regular.h  stdfonts.h
src/textengines/: CMakeLists.txt  textengine_stb.cpp
src/textengines/include/protean3d/textengine/: textengine_stb.h
src/traits3d/: CMakeLists.txt  arcball.cpp  autoscaler.cpp  axis.cpp  axisobject.cpp  colortable.cpp  coordinates.cpp  dataobject.cpp  extglwidget.cpp  function.cpp  globject.cpp  gridmapping.cpp  helper.cpp  light.cpp  parametricsurface.cpp  plot3d.cpp  scale.cpp  surfaceplot.cpp
src/traits3d/include/traits3d/: arcball.h  autoscaler.h  axis.h  axisobject.h  colortable.h  coordinates.h  dataobject.h  extglwidget.h  function.h  globject.h  gridmapping.h  light.h  parametricsurface.h  plot3d.h  scale.h  surfaceplot.h
